allprojects {
  //apply plugin: 'maven'

  group = 'net.fortytwo.smsn'
  version = '1.5'
}

subprojects {
  apply plugin: 'java'
  sourceCompatibility = 1.11
  targetCompatibility = 1.11
  tasks.withType(JavaCompile) {
//    options.release = 8
    options.encoding = 'UTF-8'
  }

  repositories {
    mavenCentral()
    mavenLocal()
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
  }

  test {
    exclude '**/**IT.*'
  }
}

//task wrapper(type: Wrapper) {
//    gradleVersion = '4.4.1'
//}

ext {
  junitVersion = '4.12'
  luceneVersion = '3.6.2'
  neo4jTinkerpopApiVersion = '0.9-3.4.0'
  rdfagentsVersion = '1.3'
  rippleVersion = '1.5'
  sesameVersion = '4.1.2'
  stream42Version = '1.2'
  tinkerpopVersion = '3.6.4'
}
